implemented function that retrieves from DB all shop categories

--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,8 @@
 
 <h2>Shops:</h2>
 <ul id="shops"></ul>
+<h2>Categories:</h2>
+<ul id="categories"></ul>
 
 <script src="script.js"></script> 
     
