implemented function that retrieves shops belonging to a specific category

--- a/static/index.html
+++ b/static/index.html
@@ -18,6 +18,8 @@
 <ul id="shops"></ul>
 <h2>Categories:</h2>
 <ul id="categories"></ul>
+<h2>Shops in categories:</h2>
+<ul id="Shops in categories"></ul>
 
 <script src="script.js"></script> 
     
