implemented function to search shop by name. Function doesn't completely work, it is called 4 times every time [NOT WORKING]

--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,10 @@
 <form action="api/v1/shops" method="get" name="getShops" id="getShops">
   <button type="button" onclick="loadShops()">See shops</button>
   <button type="button" onclick="loadCategory()">See categories</button>
+  <label for="shopName">Shop name:</label>
+ <!-- <input type="text" id="shopName" name="shopName"><br><br> -->
+  <input type="search" id="shopName" onkeypress=triggerOnEnter()>
+  <button type="button" id='searchBtn' onclick="searchShopByName()">Search</button>
 </form>
 
 <h2>Shops:</h2>
@@ -20,6 +24,8 @@
 <ul id="categories"></ul>
 <h2>Shops in categories:</h2>
 <ul id="Shops in categories"></ul>
+<h2>Input search:</h2>
+<ul id="inputSearch"></ul>
 
 <script src="script.js"></script> 
     
