implemented function to search shop by writing category name

--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
 <form action="api/v1/shops" method="get" name="getShops" id="getShops">
   <button type="button" onclick="loadShops()">See shops</button>
   <button type="button" onclick="loadCategory()">See categories</button>
-  <label for="shopName">Shop name:</label>
+  <label for="shopName">Shop or category:</label>
  <!-- <input type="text" id="shopName" name="shopName"><br><br> -->
   <input type="search" id="shopName" onkeypress=triggerOnEnter()>
   <button type="button" id='searchBtn' onclick="searchShopByName()">Search</button>
