added research by product (NOT BY KEYWORDS) and fixed bugs in other functions

--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,8 @@
  <!-- <input type="text" id="shopName" name="shopName"><br><br> -->
   <input type="search" id="shopName" onkeypress=triggerOnEnter()>
   <button type="button" id='searchBtn' onclick="searchShopByName()">Search</button>
+  <input type="search" id="productName" >
+  <button type="button" id='searchBtn2' onclick="searchShopByProduct()">Search product</button>
 </form>
 
 <h2>Shops:</h2>
@@ -26,6 +28,8 @@
 <ul id="Shops in categories"></ul>
 <h2>Input search:</h2>
 <ul id="inputSearch"></ul>
+<h2>Input product search:</h2>
+<ul id="inputProductSearch"></ul>
 
 <script src="script.js"></script> 
     
