--- a/static/home.html
+++ b/static/home.html
@@ -13,15 +13,15 @@
     <div class="headertext"> 
     </div>
     <div class="topnav">
-        <a href="/home.html">Home</a>
-        <a class="active" href="/index.HTML">Lista Shops</a>
-        <a href="/login.html">Login</a>
+        <a class="active" href="/home.html">Home</a>
+        <a href="/index.HTML">Lista Shops</a>
+        <a href="/login.html" >Login</a>
         <a href="/signin.html">Registrati</a>
       </div>
   </header>
 
-<body>
 
+<body>
 <h1>TNavigate</h1>
 
 <form action="api/v1/utentiBase" method="post" name="loginform" id="loginform">
@@ -30,16 +30,6 @@
   <input name="email" value="mario.rossi@unitn.com" id="loginEmail"/>
   <input name="email" value="123" id="loginPassword"/>
   <button type="button" onclick="login()">LogIn</button>
-</form>
-
-<h2>Shops:</h2>
-<ul id="shops"></ul>
-
-<h2>Insert new shop:</h2>
-
-<form action="api/v1/shops" method="post" name="shopform" id="shopform">
-  <input name="name" value="name" id="shopName"/>
-  <button type="button" onclick="insertShop()">Insert new shop</button>
 </form>
 
 <script src="script.js"></script> 
