--- a/static/signin.html
+++ b/static/signin.html
@@ -5,7 +5,6 @@
 	<title>TNavigate</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='https://fonts.googleapis.com/css?family=Poppy' rel='stylesheet'>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -27,8 +26,8 @@
 <h2>Form di registrazione:</h2>
 <ul id="form"></ul>
 <form action="api/v1/utentiBase" method="post" name="registrationform" id="registrationform">
-    <button type="button" onclick="registerUtenteBase()">Utente base</button>
-    <button type="button" onclick="registerShopOwner()">Negoziante</button>
+    <button type="button" id="utenteBase" onclick="register(this.id)">Utente base</button>
+    <button type="button" id="negoziante" onclick="register(this.id)">Negoziante</button>
 </form>
 
 <script src="script.js"></script> 
