implemented functions to:  -visualize all products belonging to a category  -select the product to visualize the shops it is sold in

--- a/static/index.html
+++ b/static/index.html
@@ -27,6 +27,8 @@
 <ul id="categories"></ul>
 <h2>Negozi in una specifica categoria:</h2>
 <ul id="Shops in categories"></ul>
+<h2>Prodotti in una specifica categoria:</h2>
+<ul id="Products in categories"></ul>
 <h2>Input search:</h2>
 <ul id="inputSearch"></ul>
 <h2>Input product search:</h2>
