minor html fixes

--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
   <button type="button" onclick="loadShops()">Elenco negozi</button>
   <button type="button" onclick="loadCategory()">Elenco categorie</button>
   <button type="button" onclick="loadProducts()">Elenco prodotti</button>
-  <label for="shopName">Shop or category:</label>
+  <label for="shopName">Negozio o categoria:</label>
  <!-- <input type="text" id="shopName" name="shopName"><br><br> -->
   <input type="search" id="shopName" onkeypress=triggerOnEnter()>
   <button type="button" id='searchBtn' onclick="searchShopByName()">Cerca negozio o categoria</button>
